--- a/assets/ui/less/assets.less
+++ b/assets/ui/less/assets.less
@@ -8,5 +8,48 @@
 
 .zc_header{width: 1200px; margin: 0 auto; height: 68px; .o}
 .zc_logo{.fl;.pt(19px)}
+.zc_nav{.fr}
+.zc_nav li{.fl}
+.zc_nava{.db;width: 128px; .tc;.c3;.fs(16px);.lh(68px);&:hover{text-decoration: none}}
+.zc_nav01{background: url("../images/bg_nav01.gif") no-repeat}
+.zc_nav02{background: url("../images/bg_nav02.gif") no-repeat}
+.zc_nav03{background: url("../images/bg_nav03.gif") no-repeat}
+.zc_nav04{background: url("../images/bg_nav04.gif") no-repeat}
+.zc_nav05{background: url("../images/bg_nav05.gif") no-repeat}
+.zc_navon02{background: url("../images/bg_navon02.png") no-repeat; color: #fff}
 
-.zc_con{background: url(../images/bg_zc_con.jpg) no-repeat 50% 0; height: 300px}
+.zc_con{background:url(../images/bg_zc_con.jpg) no-repeat 50% 0}
+.zc_con2{background:#fafafa url(../images/bg_zc_con2.jpg) no-repeat 50% 0}
+.pt210{.pt(210px)}
+.zc_login{width: 400px; height: 260px; border: 1px solid #e5e5e5; box-shadow: 0 0 2px 1px #f3f3f3; .bgf;  margin:0 auto}
+.zc_login_h{.lh(52px);.pl(20px); .c3; .fs(14px); border-bottom: 1px solid #eaeaea;.bgfa;}
+.zc_login_fm{width:285px; margin: 0 auto; .pt(20px)}
+.zc_login_fm p{.mb(20px);.o}
+.zc_login_in{width:210px; border: none; background: url(../images/login_sp.png) no-repeat; outline: none; .c9;.pl(55px);.pr(20px); .lh(20px);.pt(10px); .pb(10px)}
+.zc_login_in2{background: url(../images/login_sp.png) no-repeat 0 100%}
+.zc_login_sub{.btn_blue;.fr;.poi;.fw}
+.zc_login_fg{.fl;.c9}
+
+.zc_footer{.tc;.pt(40px); .pb(40px)}
+.zc_footer p{.fs(14px);.mb(5px)}
+
+.bgea{background: #eaeaea}
+.bgfa{.bgfa}
+.zc_con_in{width: 1200px; margin: 0 auto}
+.zc_snav{.pt(27px);.pb(24px)}
+.zc_snav a{.dib;width: 108px; border: 1px solid #6b716d;.lh(36px);.cf;.tc; border-radius: 2px; .mr(20px);&:hover{ text-decoration: none; background: #6b716d}}
+.zc_snavon{background: #6b716d}
+.zc_layout{background:#fff url("../images/bg_line.gif") repeat-y;.rel;.clearfix}
+.zc_tj{.abs;.db; background: url("../images/bg_icon_tj.png") no-repeat; width: 14px; height: 5px; _font-size: 0; left: 50px; top: -5px}
+.zc_outleft{width: 180px;.fl}
+.zc_til01{.lh(54px);.fs(16px);.c3;.pl(20px);.pr(10px); background: #eaeaea}
+.zc_btn{.fr;.lh(22px);.fs(12px);background: #0dc3ce;.cf;.pl(10px);.pr(10px);border-radius: 10px;.mt(15px);&:hover{text-decoration: none}}
+.zc_list li{.lh(48px);border-bottom: 1px solid #eaeaea; background: #f2f2f2}
+.zc_list a{.lh(48px);.fs(14px);.c6;.pl(20px);.db;&:hover{text-decoration: none}}
+.zc_list .zc_liston{background: #fff}
+.zc_outright{.fr;.p(20px);width: 980px;.clearfix}
+.zc_inleft{width: 520px;.fl}
+.zc_inright{width: 440px; .fr}
+.zc_intop{border: 1px solid #eaeaea}
+.zc_til02{.lh(48px);.fs(14px);.c3;.pl(20px);.pr(10px);.bgfa;border-bottom: 1px solid #eaeaea}
+
