--- a/assets/ui/less/assets.less
+++ b/assets/ui/less/assets.less
@@ -136,3 +136,47 @@
 .zc_inrtabs a{.dib;.lh(54px);.c3;.fs(14px);.pl(35px);.pr(35px);background: url("../images/bg_line2.png") no-repeat 100% 45%;&:hover{text-decoration: none}}
 .zc_inrtabs .nobg{background-image: none}
 .zc_inrtabs .zc_inrtabon{color: #0dc3ce;.bgf;.ml(-2px)}
+.zc_fp li{.lh(48px);border-bottom: 1px solid #eaeaea; .bgf;.vt}
+.zc_fp em,.zc_dlp em{color: #eaeaea; .dib;.ml(20px);.mr(20px); .vm}
+.zc_fp span{.c6;.dib; .vm;.tc;width:300px; .lh(14px);.o;}
+.zc_fp .zc_fp1{width:180px; .lh(48px);.o;.vt}
+.zc_fp .zc_fp01{background:#eaeaea url("../images/icon01.png") no-repeat 30px 50%}
+.zc_fp .zc_fp02{background:#eaeaea url("../images/icon02.png") no-repeat 30px 50%}
+.zc_fp .zc_fp03{background:#eaeaea url("../images/icon03.png") no-repeat 30px 50%}
+.zc_fp .zc_fp04{background:#eaeaea url("../images/icon04.png") no-repeat 30px 50%}
+.zc_page{.pt(20px);.pb(20px);.lh(24px);.tc}
+.zc_page .zc_pa{.dib;width: 24px; height: 24px; background: #fff; border-radius:50%;.mr(10px);.vm;.c6}
+.zc_page a{.c6}
+.zc_page .zc_paon{background: #0dc3ce;.cf}
+
+.zc_dtil{.lh(52px);border-bottom: 1px solid #eaeaea; .pl(20px); .c3;.fs(14px)}
+.zc_ddsp{.c6;.dib; .vm;.tc;width:260px; .lh(52px);.o;}
+.zc_navlog{.pt(30px);.pb(20px);.clearfix}
+.zc_zhi{.fl;.lh(32px);.cf;.pl(10px);.pr(10px)}
+.ant-select {position:relative;width:120px;z-index: 2;.fl}
+.ant-select .ant-selected-text { display:block; position:relative;text-indent:0.8em;height:30px;  line-height:30px;  border:1px solid #eaeaea;  color:#666;  font-size:12px;  background:#fcfcfc;}
+.ant-select-less .ant-selected-text {  height:28px;  line-height:28px;}
+.ant-select em {  float:left;}
+.ant-select i {  position:absolute;  width:7px;  height:4px;  top:50%;  right:10px;  margin-top:-2px;  overflow:hidden;  background:url(http://static.wkimg.com/common/ui/ant_icons/ant_sprite.png) -50px 0 no-repeat;  _background:url(http://static.wkimg.com/common/ui/ant_icons/ant_sprite.gif) -50px 0 no-repeat;}
+.ant-select .ant-select-item {  position:absolute;  top:27px;  left:0;  width:100%;  background:#fff;}
+.ant-select .ant-select-list {  border:1px solid #eaeaea;  max-height:180px;  height:auto;  _height:180px;  overflow:auto;}
+.ant-select li {  height:30px;  line-height:30px;  text-indent:0.8em;  vertical-align:middle;  font-size:12px;  overflow:hidden;}
+.ant-select a,.ant-select a:visited{  display:block;  padding-right:6px;  color:#666;}
+.ant-select a:hover {  color:#666;  text-decoration:none;  background:#f2f2f2;}
+
+.zc_afm{.pt(30px);.pb(30px)}
+.zc_ain{.lh(16px);border: 1px solid #eaeaea; border-right: none;.pt(10px);.pb(10px);.c9;.fw;width: 160px; .pl(10px); border-radius: 2px 0 0 2px;.vm}
+.zc_abtn{.vm;.lh(38px);width: 68px; .tc; background: #0dc3ce;border-radius:0 2px 2px 0; border: none; .cf; .poi}
+.zc_aout{.clearfix;.bgf}
+.zc_aoutl{width: 240px;border-right: 1px solid #eaeaea;.fl}
+.zc_aoutl dt{.lh(48px);border-bottom: 1px solid #eaeaea;.fs(14px);.c6;background:#f2f2f2 url("../images/icon.gif") no-repeat 92% 50%;.pl(20px);.pr(20px)}
+.zc_dlup dd{display: none}
+.zc_aoutl .zc_dldown dt{background:#f2f2f2 url("../images/icon2.gif") no-repeat 92% 50%}
+.zc_aoutl dd{.bgfa;.lh(48px);.fs(14px);.c6;border-bottom:1px dashed #eaeaea}
+.zc_aoutl .zc_asp{.dib;width: 60px; .lh(24px);.tc;.vm;background: #0dc3ce;border-radius: 3px;.cf;.fs(12px)}
+.zc_aoutr{width: 959px;.bgf;.fr}
+.zc_aname{.bgfa;.lh(52px);.fs(14px);.c6;border-bottom:1px solid #eaeaea;.pl(20px);.clearfix}
+.zc_aname .zc_asp{.dib;width: 60px; .lh(24px);.tc;.vm;background: #0dc3ce;border-radius: 3px;.cf;.fs(12px)}
+.zc_spa{.fl;.lh(52px);}
+.ant-select2{width: 200px;margin-top:10px; margin-right: 10px}
+.zc_in2{width: 188px; margin-right: 10px}
