--- a/assets/ui/less/assets.less
+++ b/assets/ui/less/assets.less
@@ -73,7 +73,7 @@
 .zc_til03{.lh(48px);.fs(14px);.c3;.pl(20px);.pr(10px)}
 .zc_bom_left{.fl; width: 149px}
 .zc_bom_right{.fr; width: 309px}
-.zc_list2{.fl;width: 179px}
+.zc_list2{.fl;width: 179px;.mt(-1px)}
 .zc_list2 li{.lh(38px)}
 .zc_list2 a{.lh(38px);.fs(12px);.c6;.pl(20px);.db;&:hover{text-decoration: none; color: #0dc3ce}}
 .zc_list2 .zc_liston a{background: #fff;color: #0dc3ce;border-bottom: 1px solid #eaeaea;border-top: 1px solid #eaeaea}
