--- a/activity/ui/less/activity.less
+++ b/activity/ui/less/activity.less
@@ -117,7 +117,9 @@
 .hd_table{width: 100%;border-collapse: collapse}
 .hd_thead th{.lh(30px);.tc;border-bottom: 1px solid #ededed;.n}
 .hd_tbody td{.lh(30px);.tc;border-bottom: 1px solid #ededed;.c6}
-.hd_info{.bded;.abs();width: 218px;min-height: 227px;.p(10px);.bgf;top: 45px;left: -240px;background: #fafafa}
+.hd_tbody .onToday{color: @hover_blue}
+.hd_tbody .onSelect{color:#f60}
+.hd_info{.bded;.abs();width: 218px;min-height: 227px;.p(10px);.bgf;top: 45px;left: -240px;background: #fafafa;.dn}
 .hd_info_today{.lh(20px);.o;.mb(5px)}
 .hd_info_til{.c9}
 .hd_info_close{.fr;.c6;&:hover{color:@hover_blue;text-decoration: none}}
